<resources>
    <string name="app_name">CustomViewAssigment</string>
    <string name="txt_appbar">OMP Dashboard</string>
    <string name="txt_progress">In progress</string>
    <string name="text_create_additional_pages">Create additional pages</string>
    <string name="text_tasks">Tasks</string>
    <string name="text_show_in_days">Show in days</string>
    <string name="txt_message">Message</string>
    <string name="txt_new_task_title">A Create New Task</string>
    <string name="txt_project_name">PROJECT NAME</string>
    <string name="txt_create_task">Create Task</string>
    <string name="txt_storage">168KB</string>
</resources>